--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,12 +16,12 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+  font-family: "switzer";
+  src: url('/public/fonts/Switzer-Regular.ttf');
+}
+
+@font-face {
+  font-family: "outfit";
+  src: url('/public/fonts/Outfit-Regular.ttf');
 }
